--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                   <span class="upper-case banner quote">Nuha Minar</span>
               </h1>
               <p class="text-anim">A full stack allaround designer that tristique est placerat massa consectetur quisque
-                lobortis vitae faucibus diam consequat maecenas turpis metus sit diam purus leo in varius ac quam est
+                lobortis vitae faucibus consequat maecenas turpis metus sit diam purus leo in varius ac quam est
                 lorem ipsum.</p>
 
               <div class="social-banner-wrapper">
@@ -317,7 +317,7 @@
                           <li>Web Design</li>
                           <li>24/7 Support</li>
                         </ul>
-                        <a class="rts-btn btn-main" href="#0" role="button">Get Starter</a>
+                        <a class="rts-btn btn-main" href="#0" role="button">Get Started</a>
                       </div>
                     </div>
                     <!-- Single plan-->
@@ -332,7 +332,7 @@
                           <li>Web Design</li>
                           <li>24/7 Support</li>
                         </ul>
-                        <a class="rts-btn btn-main" href="#0" role="button">Get Starter</a>
+                        <a class="rts-btn btn-main" href="#0" role="button">Get Started</a>
                       </div>
                     </div>
                     <!-- Single plan-->
@@ -347,7 +347,7 @@
                           <li>Web Design</li>
                           <li>24/7 Support</li>
                         </ul>
-                        <a class="rts-btn btn-main" href="#0" role="button">Get Starter</a>
+                        <a class="rts-btn btn-main" href="#0" role="button">Get Started</a>
                       </div>
                     </div>
                   </div>
@@ -858,7 +858,7 @@
                             <div class="media align-items-center">
                               <div class="media-body info-details">
                                 <h6 class="info-type">Email Me</h6>
-                                <span class="info-value">.
+                                <span class="info-value">
                                   <a href="mailto:info@nuha.com">info@nuha.com</a>
                                 </span>
                               </div>
