--- a/index-white.html
+++ b/index-white.html
@@ -108,7 +108,7 @@
                 <span class="color-name quote">Hello I'm</span> 
                   <span class="upper-case banner quote">Nuha Minar</span>
               </h1>
-              <p class="text-anim">A full stack allaround designer that tristique est placerat massa consectetur quisque
+              <p class="">A full stack allaround designer that tristique est placerat massa consectetur quisque
                 lobortis vitae faucibus consequat maecenas turpis metus sit diam purus leo in varius ac quam est
                 lorem ipsum.</p>
 
