--- a/index.html
+++ b/index.html
@@ -17,10 +17,11 @@
   <!-- CSS vendors-->
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/all.min.css">
-  <link rel="stylesheet" href="css/tiny-slider.css">
+
   <link rel="stylesheet" href="css/lity.min.css">
+
   <link rel="stylesheet" href="css/simplebar.min.css">
-  <link rel="stylesheet" href="css/jquery.mb.YTPlayer.min.css">
+
   <link id="color-scheme" rel="stylesheet" href="css/colors/main-red.css">
   <!-- Custom CSS (Add your custom CSS styles to this file)-->
   <link rel="stylesheet" href="css/custom.css">
@@ -684,7 +685,7 @@
                             </div>
                             <a class="" href=" #blog-details" data-bs-toggle="modal" data-bs-target="#exampleModal"
                               data-bs-whatever="@mdo">
-                              <h5 class="card-title content-title">The next generation markeing alternatives</h5>
+                              <h5 class="card-title content-title">Next generation markeing altern atives and social</h5>
                             </a>
 
                             <a href="#" class="read-more-btn" data-bs-toggle="modal" data-bs-target="#exampleModal"
@@ -707,7 +708,7 @@
                             </div>
                             <a class="" href=" #blog-details" data-bs-toggle="modal" data-bs-target="#exampleModal"
                               data-bs-whatever="@mdo">
-                              <h5 class="card-title content-title">The next generation markeing alternatives</h5>
+                              <h5 class="card-title content-title">Popular next generation mark is a altern atives</h5>
                             </a>
 
                             <a href="#" class="read-more-btn" data-bs-toggle="modal" data-bs-target="#exampleModal"
@@ -730,7 +731,7 @@
                             </div>
                             <a href="#blog-details" data-bs-toggle="modal" data-bs-target="#exampleModal"
                               data-bs-whatever="@mdo">
-                              <h5 class="card-title content-title ">The next generation markeing alternatives</h5>
+                              <h5 class="card-title content-title ">Popular next generation mark is a altern atives</h5>
                             </a>
 
                             <a href="#" class="read-more-btn" data-bs-toggle="modal" data-bs-target="#exampleModal"
@@ -753,7 +754,7 @@
                             </div>
                             <a href="#blog-details" data-bs-toggle="modal" data-bs-target="#exampleModal"
                               data-bs-whatever="@mdo">
-                              <h5 class="card-title content-title">The next generation markeing alternatives</h5>
+                              <h5 class="card-title content-title">Appoinment next generation markeing alternatives</h5>
                             </a>
 
                             <a href="#" class="read-more-btn" data-bs-toggle="modal" data-bs-target="#exampleModal"
@@ -776,7 +777,7 @@
                             </div>
                             <a href="#blog-details" data-bs-toggle="modal" data-bs-target="#exampleModal"
                               data-bs-whatever="@mdo">
-                              <h5 class="card-title content-title">The next generation markeing alternatives</h5>
+                              <h5 class="card-title content-title">another next generation mark is a altern atives hear</h5>
                             </a>
 
                             <a href="#" class="read-more-btn" data-bs-toggle="modal" data-bs-target="#exampleModal"
@@ -1013,11 +1014,13 @@
     <script src="js/imagesloaded.pkgd.min.js"></script>
     <script src="js/isotope.pkgd.min.js"></script>
     <script src="js/animatedModal.js"></script>
-    <script src="js/tiny-slider.js"></script>
+
     <script src="js/lity.min.js"></script>
+    
     <script src="js/simplebar.min.js"></script>
     <script src="js/paper-core.js"></script>
     <script src="js/simplex-nois.js"></script>
+    <script src="js/scrollsmoother.js"></script>
     <script src="js/main.js"></script>
     <script src="js/custom.js"></script>
   </body>
